--- a/main.html
+++ b/main.html
@@ -10,7 +10,29 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+	<table>
+		<label for="name">Name</label>
+		<input type="text" id="name" required>
+		<label for="email">Email</label>
+		<input type="email" id="email" required>
+		<label for="male">Male</label>
+		<input type="radio" name="gender" id="male" required>
+		<label for="female">Female</label>
+		<input type="radio" name="gender" id="female" required>
+		<label type="cars">Car Brands</label>
+		<select>
+			<option>BMW</option>
+			<option>Audi</option>
+			<option>Mercedez</option>
+		</select>
+		<label for="carage">Car Age</label>
+		<input type="number" id="carage" required>
+		<label for="dop">Date of Purchase (dop)</label>
+		<input type="date" id="dop" required>
+		<label for="password">Password</label>
+		<input type="password" id="password" required>
+		<button type="submit">Submit Button</button>
+	</table>
 </body>
 
 </html>
