--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-	<table>
+	<form>
 		<label for="name">Name</label>
 		<input type="text" id="name" required>
 		<label for="email">Email</label>
@@ -32,7 +32,7 @@
 		<label for="password">Password</label>
 		<input type="password" id="password" required>
 		<button type="submit">Submit Button</button>
-	</table>
+	</form>
 </body>
 
 </html>
