--- a/main.html
+++ b/main.html
@@ -20,7 +20,7 @@
 		<label for="female">Female</label>
 		<input type="radio" name="gender" id="female" required>
 		<label type="cars">Car Brands</label>
-		<select>
+		<select id="cars">
 			<option>BMW</option>
 			<option>Audi</option>
 			<option>Mercedez</option>
