--- a/main.html
+++ b/main.html
@@ -19,7 +19,7 @@
 		<input type="radio" name="gender" id="male" required>
 		<label for="female">Female</label>
 		<input type="radio" name="gender" id="female" required>
-		<label type="cars">Car Brands</label>
+		<label for="cars">Car Brands</label>
 		<select id="cars">
 			<option>BMW</option>
 			<option>Audi</option>
